chore: auth endpoints added
