# apps/api/lib/guards/auth.guard.ts
@@ -26,6 +26,7 @@ export class AuthGuard implements CanActivate {
 
     const request = context.switchToHttp().getRequest();
     const token = this.extractTokenFromHeader(request);
+
     if (!token) {
       throw new UnauthorizedException();
     }
@@ -33,16 +34,29 @@ export class AuthGuard implements CanActivate {
       const payload = await this.jwt.verifyAsync(token, {
         secret: process.env.JWT,
       });
-      request['user'] = payload;
+      request['user'] = { token : token , ...payload };
     } catch {
       throw new UnauthorizedException();
     }
     return true;
   }
 
-  private extractTokenFromHeader(request : any): string | undefined {
-    const [type, token] =
-      request.headers.authorization?.split(' ') ?? [];
-    return type === 'Bearer' ? token : undefined;
+  private extractTokenFromHeader(req : any): string | undefined {
+    const authHeader = req.headers['authorization'];
+    if (authHeader && authHeader.startsWith('Bearer ')) {
+      return atob(authHeader.split(' ')[1]);
+    }
+
+    // ✅ 2. Check cookies (when using res.cookie('access_token', ...))
+    if (req.cookies && req.cookies['access_token']) {
+      return atob(req.cookies['access_token']);
+    }
+
+    // ✅ 3. Check query param (optional)
+    if (req.query && typeof req.query.token === 'string') {
+      return req.query.token;
+    }
+
+    return undefined;
   }
 }
